--- a/setup/planeradar.service
+++ b/setup/planeradar.service
@@ -3,8 +3,8 @@ Description=Python script to read ADS-B messages
 After=dump1090.service
 
 [Service]
-WorkingDirectory=/home/pi/Coding/PlaneRadar/
-ExecStart=/bin/bash -c "source /home/pi/Coding/PlaneRadar/venv/bin/activate && python /home/pi/Coding/PlaneRadar/main.p -s 4>
+WorkingDirectory=/home/pi/PlaneRadar/
+ExecStart=/bin/bash -c "source /home/pi/PlaneRadar/venv/bin/activate && python /home/pi/PlaneRadar/main.py -s 4"
 Restart=always
 User=pi
 
