Create .enc Template

--- a/setup/.env_template
+++ b/setup/.env_template
@@ -1,4 +1,9 @@
 # .env
+# Usage:
+# 1. Rename this file to .env
+# 2. Move it to the same folder as the main.py
+# 3. Fill in with individual values
+
 ENVIRONMENT=development  # Set to "development" for emulator or "production" for real hardware
 LATITUDE=50.04
 LONGITUDE=8.56
